fixed image overflow issues

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -6,7 +6,7 @@ body {
 }
 h1 {
     font-family: 'Lora', serif;
-    
+
 }
 nav ul {
     display: flex;
@@ -42,4 +42,8 @@ figure {
   text-align: center;
   margin: 10px;
   padding: 10px;
+  overflow-wrap: break-word;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow: auto;
 }
